--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -3,5 +3,24 @@
   display: flex;
   flex-direction: column;
   text-align: center;
-  
 }
+
+.task-Pendente{
+  background-color: rgb(248, 196, 196);
+  border-radius: 30px;
+  width: min-content;
+  height: 100%;
+  padding: 5px 15px 5px 15px;
+  color: rgb(154, 10, 10);
+}
+
+.task-Concluído{
+  background-color: rgb(183, 235, 201);
+  border-radius: 30px;
+  width: min-content;
+  height: 100%;
+  padding: 5px 15px 5px 15px;
+  color: rgb(1, 82, 35);
+}
+
+
